1887 [Log] fixed missing log entries in the preliminary log file
1886 [Update] removed core file date check
1885 [HD Streams Extractor] added a warning if a gaps file is created
1884 [Update] fixed problem with applying core update
  
1883
  - (zathor) [MP4 Muxer] fixed tmp directory handling. Bug #3129545
  - (zathor) [Update] changed update detection. Some/all downloads may need to be reapplied once.
  - (zathor) [Update] added the update date to the update window
  - (zathor) [Log] added preliminary log file writing. the well formed file will be written during closing.
  - (zathor) fixed main window height saving
  - (zathor) [Update] added update log entries also to the main log
  - (zathor) [Audio Cutter] fixed problem with some non 7bit ASCII path/file names. Bug #3144278
  - (zathor) changed version numbers to the svn build number
  - (zathor) added besplit

0.3.5.31
  - (zathor) [ChapterCreator] removed error popup if more than one chapter is added within the preview window. Bug #3135824
  - (zathor) [ChapterCreator] add only a new chapter item in preview mode if no chapter item is selected. fixed the chapter number for this item. Bug #3135824
  - (zathor) [ChapterCreator] preview window will be closed together with the chapter creator window
  - (zathor) [ChapterCreator] fixed clear button. Bug #3135824
  - (zathor) [VideoPlayer] time code enabled by default
  - (kurtnoise + zathor) added flac encoding. Feature request #2930601

0.3.5.30
  - (zathor) [Update] enhanced update detection so that it is possible to downgrade a tool

0.3.5.29
  - (zathor) [Audio Downmix] enhanced avisynth script part II. Patch by tebasuna51

0.3.5.28
  - (zathor) [audio encoder] if the encoder only supports 2 channels then "keep original channels" will be removed and the default is "downmix multichannel to stereo"

0.3.5.27
  - (zathor) [File Indexer] after "on completion load files" no audio encoding could be queued. Bug #3110119